--- a/favourites.html
+++ b/favourites.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -110,41 +110,50 @@
     <!------------------------------>
 
     <div class="container my-5">
-            <h2 class="text-center">Favourites</h2>
-            <ul class="list-group" id="favourites-list">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Apple
-                    <button class="btn like-btn" onclick="toggleFavourite(this)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
-                        </svg>
-                    </button>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Bread
-                    <button class="btn like-btn" onclick="toggleFavourite(this)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
-                        </svg>
-                    </button>
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Milk
-                    <button class="btn like-btn" onclick="toggleFavourite(this)">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
-                            <path d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z"></path>
-                        </svg>
-                    </button>
-                </li>
-            </ul>
-        </div>
+        <h2 class="text-center">Favourites</h2>
+        <ul class="list-group" id="favourites-list">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Apple
+                <button class="btn like-btn" onclick="toggleFavourite(this)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                        <path
+                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
+                        </path>
+                    </svg>
+                </button>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Bread
+                <button class="btn like-btn" onclick="toggleFavourite(this)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                        <path
+                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
+                        </path>
+                    </svg>
+                </button>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Milk
+                <button class="btn like-btn" onclick="toggleFavourite(this)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="heart-icon">
+                        <path
+                            d="M12 21l-1.5-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.5 11.18L12 21z">
+                        </path>
+                    </svg>
+                </button>
+            </li>
+        </ul>
+    </div>
 
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
-                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                        href="./main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
                             stroke-width="1">
                             <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
@@ -153,7 +162,7 @@
                         </svg>
                         Home
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
                             <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2">
@@ -166,7 +175,7 @@
                         </svg>
                         Shopping List
                     </a>
-                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
