--- a/main.html
+++ b/main.html
@@ -208,7 +208,7 @@
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
-                        href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                        href="main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
                             stroke-width="1">
                             <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
@@ -217,7 +217,7 @@
                         </svg>
                         Home
                     </a>
-                    <a class="nav-link d-flex flex-column align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
                             <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2">
@@ -230,7 +230,7 @@
                         </svg>
                         Shopping List
                     </a>
-                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="#">
+                    <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
                             <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572">
